Finally got basic routing working. Moving onto creating dynamic routes.

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Redwind Video Vault</title>
-  <link href="./styles/main.css" rel="stylesheet">
+  <link href="./assets/styles/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
       </form>
     </div>
     <div class="vid-box" id="vid-box">
-      <iframe src="https://www.youtube.com/embed/rcsD2okrGbo?si=KgqbLbEoBIY2Bxd0" frameborder="0"></iframe>
+      <!-- <iframe src="https://www.youtube.com/embed/rcsD2okrGbo?si=KgqbLbEoBIY2Bxd0" frameborder="0"></iframe> -->
     </div>
     <footer>
       <div class="footer-info">
@@ -39,7 +39,7 @@
       </div>
     </footer>
   </div>
-  <script src="./scripts/main.js"></script>
+  <script src="./src/scripts/main.js"></script>
 </body>
 
 </html>
