Added log, but will remove

--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
     <a href="/" value="/" onclick="route()">
       <h1>Redwind Video Vault</h1>
     </a>
+    <img class="ht-logo" id="ht-logo" src="./assets/images/Y0k7akNFXQYX9LstTWRO--1--wv071_bg-rmvd.png" alt="ht_logo">
     <div class="video-form">
       <form id="add-video">
         <label for="name-input">Name</label>
